[project]
name = "evojax"
version = "0.2.16"
description = "EvoJAX: Hardware-accelerated Neuroevolution."
authors = [
    { name = "Google", email = "evojax-dev@google.com" }
]
dependencies = [
    "Pillow",
    "cma",
    "flax<0.7.0",
    "jax>=0.2.17",
    "jaxlib>=0.1.65",
    "matplotlib",
    "pyyaml",
    "evojax[extra]>=0.2.16",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
